--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Little Lemon is a mediterranean Restaurant with delicious food inspired from Italian, Turkish and Greek cuisine."/>
+    <meta name="og:title" content="Little Lemon restaurant"/>
+    <meta name="og:description" content="Little Lemon is a mediterranean Restaurant with delicious food inspired from Italian, Turkish and Greek cuisine."/>
+    <meta name="og:image" content="https://example.com/one-place-fishing-store.jpg"/>
     <meta
       name="description"
       content="Web site created using create-react-app"
